--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qw55-syntax",
+  "name": "หวย3ตัวบนบาทละเท่าไหร่ เว็บหวยออนไลน์ มีหวยให้เล่นครบทุกชนิด ✔️ ❤️ ♕",
   "theme": "syntax",
   "version": "0.2.0",
   "description": "หวย3ตัวบนบาทละเท่าไหร่✔️ ❤️ ♕ เว็บหวยออนไลน์ มีหวยให้เล่นครบทุกชนิด ตลอด 24 ชั่วโมง",
